--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <slf4j.version>1.7.13</slf4j.version>
     <logback.version>1.1.3</logback.version>
   </properties>
-
+<dependencyManagement>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -51,9 +51,16 @@
       <version>${logback.version}</version>
     </dependency>
     <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-core</artifactId>
+      <version>${logback.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
       <version>${slf4j.version}</version>
     </dependency>
   </dependencies>
+</dependencyManagement>
+
 </project>
